# simplepatch

./: .gitignore  LICENSE  README.md  SPEC.md  devenv.nix  justfile  pyproject.toml  simplepatch.py
.codeassistant/rules/: general.mdc
simplepatch/: __init__.py  __main__.py  applier.py  converter.py  git.lark  models.py  parser.py  simplepatch.lark
tests/: __init__.py  conftest.py  fsutils.py  snapshots.py  test_cli.py  test_git_parser.py  test_parser.py  test_patch_apply.py  test_simplepatch.py
tests/.snapshots/test_cli/: test_cli[--help].py  test_cli[--version].py  test_cli[-V].py  test_cli[-h].py  test_cli[].py  test_cli[ambiguous match1].py  test_cli[apply --help].py  test_cli[apply -h].py  test_cli[apply basic].py  test_cli[apply chained patches reverse order].py  test_cli[apply chained patches].py  test_cli[apply missing patch file].py  test_cli[apply multiple patches].py  test_cli[apply stdin].py  test_cli[apply with subdir].py  test_cli[apply].py  test_cli[change permissions].py  test_cli[chmod with old perms info].py  test_cli[convert --help].py  test_cli[convert -h].py  test_cli[convert auto-detect git format].py  test_cli[convert auto-detect simplepatch format].py  test_cli[convert git to simplepatch - delete file].py  test_cli[convert git to simplepatch - mode change].py  test_cli[convert git to simplepatch - new file].py  test_cli[convert git to simplepatch - rename file].py  test_cli[convert git to simplepatch - simple edit].py  test_cli[convert git to simplepatch - stdin].py  test_cli[convert].py  (+28 more)
tests/data/: apply.patch  git.patch  parser.patch
(+55 files in other folders)
