[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "simplepatch"
version = "0.1.0"
description = "Patch file format designed for humans"
readme = "README.md"
requires-python = ">=3.14"

[tool.setuptools]
packages = ["simplepatch"]

[tool.ruff] # https://docs.astral.sh/ruff/settings/
line-length = 100
target-version = "py314"
exclude = [".snapshots"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"


[tool.ty.src] # https://docs.astral.sh/ty/configuration/
exclude = ["**/.snapshots"]
